[tool.poetry]
name = "gb"
version = "0.1.2"
description = "A Python gopher server."
authors = ["Simon de Vlieger <cmdr@supakeen.com>"]
license = "MIT"
readme = "README.md"
keywords = ["gopher", "server"]
repository = "https://src.tty.cat/supakeen/gb"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
packages = [
    { include = "gb", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
tornado = "^6.0"
click = "^8.0"
python-magic = "^0.4.27"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
coverage = "^7.2"
black = { version = "*", allow-prereleases = true }
pytest-cov = "^4.0"
pre-commit = "^3.2"
mypy = "^1.2.0"
poetry-dynamic-versioning = "^0.21.4"
ruff = "^0.0.263"

[tool.poetry.group.dev.dependencies]
tox = "^4.5.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=gb test/"

[tool.black]
line-length = 80
target_version = ["py36"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.poetry.scripts]
gb = 'gb.__main__:main'

[tool.mypy]
python_version = "3.7"
platform = "linux"
show_column_numbers = true
follow_imports = "normal"
ignore_missing_imports = true
disallow_untyped_calls = true
warn_return_any = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
